--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "nodemon index.js",
-		"start": "node index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2",
     "mic": "^2.1.2",
+    "mongoose": "^7.1.1",
     "openai": "^3.2.1"
   },
   "devDependencies": {
