--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "start": "node index.js"
+    "start": "node index.js",
+		"ui": "vite"
   },
   "keywords": [],
   "author": "",
@@ -17,9 +18,14 @@
     "fluent-ffmpeg": "^2.1.2",
     "mic": "^2.1.2",
     "mongoose": "^7.1.1",
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "@vitejs/plugin-react": "^4.0.0",
+    "nodemon": "^2.0.22",
+    "vite": "^4.3.5"
   }
 }
