--- a/package.json
+++ b/package.json
@@ -7,16 +7,18 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
     "start": "node index.js",
-		"ui": "vite"
+    "ui": "vite"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2",
     "mic": "^2.1.2",
+    "moment": "^2.29.4",
     "mongoose": "^7.1.1",
     "openai": "^3.2.1",
     "react": "^18.2.0",
