--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2",
+    "framer-motion": "^10.12.10",
     "mic": "^2.1.2",
     "moment": "^2.29.4",
     "mongoose": "^7.1.1",
     "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.11.1"
   },
   "devDependencies": {
